[package]
name = "diesel_pg_tester"
version = "0.5.0"
authors = ["Shane Hathaway <shane.hathaway@openpaymentnetwork.us>"]
edition = "2018"
repository = "https://github.com/hathawsh/diesel_pg_tester"

[dependencies]
chrono = "0.4"
diesel = { version = "1", features = [ "postgres" ] }
thread-id = "3"

[dev-dependencies]
once_cell = "1"
