[package]
name = "diesel_pg_tester"
version = "0.5.1"
authors = ["Shane Hathaway <shane.hathaway@openpaymentnetwork.us>"]
edition = "2018"
description = "Runs Diesel tests efficiently using a live Postgres connection."
license = "MIT OR Apache-2.0"
repository = "https://github.com/hathawsh/diesel_pg_tester"
keywords = ["diesel", "postgres", "test"]

[dependencies]
chrono = "0.4"
diesel = { version = "1", features = [ "postgres" ] }
thread-id = "3"

[dev-dependencies]
once_cell = "1"
